# ITI

./: menu_script.sh
emb_linux/calculator_make/: CMakeLists.txt  main.c
emb_linux/calculator_make/Lib/: add.c  division.c  mult.c  substraction.c
emb_linux/calculator_make/include/: add.h  division.h  multiply.h
emb_linux/dio_library/: dioprogram.elf  dioprogram.hex  main.c  std_types.h
emb_linux/dio_library/MCAL/: DIO.c  DIO.h  DIO_REG.h  bit_math.h
linux/: task1.sh
